// SonarLint, open source software quality management tool.
// Copyright (C) 2015-2023 SonarSource
// mailto:contact AT sonarsource DOT com
//
// SonarLint is free software; you can redistribute it and/or
// modify it under the terms of the GNU Lesser General Public
// License as published by the Free Software Foundation; either
// version 3 of the License, or (at your option) any later version.
//
// SonarLint is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
// Lesser General Public License for more details.
//
// You should have received a copy of the GNU Lesser General Public License
// along with this program; if not, write to the Free Software Foundation,
// Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.

syntax = "proto2";

package sonarqube.ws.component;

import "sonarqube/ws-commons.proto";

option java_package = "org.sonarsource.sonarlint.core.serverapi.proto.sonarqube.ws";
option java_outer_classname = "Components";
option optimize_for = SPEED;

// WS api/components/search
message SearchWsResponse {
  optional sonarqube.ws.commons.Paging paging = 1;
  repeated Component components = 2;
}

// WS api/components/tree
message TreeWsResponse {
  optional sonarqube.ws.commons.Paging paging = 1;
  optional Component baseComponent = 3;
  repeated Component components = 4;
}

// WS api/components/show
message ShowWsResponse {
  optional sonarqube.ws.commons.Paging paging = 1;
  optional Component component = 2;
  repeated Component ancestors = 3;
}

message Component {
  optional string key = 2;
  optional string name = 6;
}
